2019-1/231/users/4230/executions/1581_1016.log
== SUBMITION (2019-03-21 18:20:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("lado a: "))
b = int(input("lado b: "))
c = int(input("lado c: "))
s = (a+b+c)/2
from math import*
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- EXECUTION TIME:
0.159044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:20:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("lado a: "))
b = int(input("lado b: "))
c = int(input("lado c: "))
s = (a+b+c)/2
from math import*
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:21:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("lado a: "))
b = int(input("lado b: "))
c = int(input("lado c: "))
s = float((a+b+c)/2)
from math import*
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- EXECUTION TIME:
0.128929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1581/1016/main.py", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:22:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("lado a: "))
b = int(input("lado b: "))
c = int(input("lado c: "))
s = (a+b+c)/2
from math import**
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- EXECUTION TIME:
0.181078
-- ERROR:
  File "/home/codebench/codes/1581/1016/main.py", line 8
    from math import**
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:22:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("lado a: "))
b = int(input("lado b: "))
c = int(input("lado c: "))
s = (a+b+c)/2
from math import*
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:22:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("lado a: "))
b = float(input("lado b: "))
c = float(input("lado c: "))
s = (a+b+c)/2
from math import*
area = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))


-- EXECUTION TIME:
0.23198
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
